--- a/services/phpsupervisor/conf.d/supervisord.conf
+++ b/services/phpsupervisor/conf.d/supervisord.conf
@@ -12,5 +12,11 @@ port=0.0.0.0:9001        ; ip_address:port specifier, *:port for all iface
 username=user              ; default is no username (open server)
 password=123               ; default is no password (open server)
 
+[unix_http_server]         
+file=/var/run/supervisord.sock
+
+[rpcinterface:supervisor] 
+supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
+
 [include]
 files = /etc/supervisor/conf.d/*.conf
